[metadata]
name = irolog
version = 0.0.1
author = Sandeep Gusain
author_email = sandeep.gusain3761@gmail.com
description = A formatter for use with the python logger module to print colorful output to console
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SandeepGusain/irolog
project_urls =
    Bug Tracker = https://github.com/irolog/SandeepGusain/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4
